# graphpipe

./: .gitignore  LICENSE.MIT  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yaml
backend/: Cargo.toml  build.rs
backend/assets/: graph-renderer.js  index.html  styles.css
backend/src/: assets.rs  bg_layout.rs  graph.rs  graph_data.rs  layout.rs  main.rs  server.rs  stable_ids.rs
frontend/src/: graph-renderer.ts
scripts/: test-runner.sh  test.sh
