[package]
name = "nodepipe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
#forceatlas2 = { path = "../../forceatlas2-rs", features = [] }
forceatlas2 = { git = "https://framagit.org/ZettaScript/forceatlas2-rs" }
log = "0.4.27"
multi_index_map = "0.15.0"
petgraph = { version = "0.8.1", features = ["serde-1"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
